# EMAIL_AI_AGENT

./: README.md  app.py  pyproject.toml  requirements.txt
IsolatedTests/: test_automation.py  test_human_review_agent.py  test_manager.py
agents/: agent.py  runner.py
magents/: human_review_agent.py  manager_agent.py
models/: email_models.py
tools/: email_tools.py
