[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
#readme = "README.md"
authors = [
    { name = "Muhammad Qasim", email = "mqasim111786111@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.17",
]

[project.scripts]
agents = "agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
